--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,10 @@
   "hosting": {
     "target": "wireframes",
     "public": "build/web",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
