--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   charts_flutter: ^0.9.0
+  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
   flutter_test:
